--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -1,4 +1,4 @@
-<table st-table="rowCollection" class="table table-striped">
+<table st-table="rowCollection" ng-if="$ctrl.people.length" class="table table-striped">
     <thead>
         <tr>
             <th>First Name</th>
