Added showing of number of direct reports for upper management (still need to improve style).

--- a/src/main/angular/src/peoplesearch/orgchart.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart.component.html
@@ -14,6 +14,7 @@
             <div class="org-chart-connector"></div>
             <person-card person="manager"
                          size="{{ $ctrl.getManagerCardSize() }}"
+                         show-direct-report-count="true"
                          ng-click="$ctrl.selectPerson(manager.userKey)">
             </person-card>
         </div>
