--- a/src/main/angular/src/peoplesearch/person-card.component.html
+++ b/src/main/angular/src/peoplesearch/person-card.component.html
@@ -1,6 +1,8 @@
 <div class="person-card-content" ng-switch="$ctrl.size">
     <div class="avatar" ng-style="$ctrl.getAvatarStyle()" aria-label="User avatar"></div>
-    <div class="reports" ng-if="$ctrl.showDirectReportCount && $ctrl.person.numOfDirectReports" ng-bind="$ctrl.person.numOfDirectReports"></div>
+    <div class="reports"
+         ng-if="$ctrl.showDirectReportCount && $ctrl.person.numOfDirectReports"
+         ng-bind="$ctrl.person.numOfDirectReports"></div>
 
     <div class="details" ng-switch-when="small">
         <div ng-bind="$ctrl.person.displayNames[0]"></div>
