--- a/src/main/angular/src/peoplesearch/peoplesearch.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch.component.html
@@ -1,5 +1,5 @@
 <app-bar>
-    <div id="page-content-title">People Search</div>
+    <div class="page-content-title">People Search</div>
     <span flex></span>
     <icon-button ng-click="$ctrl.viewToggleClicked()" ng-class="$ctrl.viewToggleClass"></icon-button>
 </app-bar>
