--- a/src/main/angular/src/peoplesearch/peoplesearch.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch.scss
@@ -1,7 +1,15 @@
+body, html {
+  height: 100%;
+}
+
 body {
+  box-sizing: border-box;
+  padding: 10px;
+
   > ui-view {
     box-sizing: border-box;
     display: block;
+    height: 100%;
     overflow: hidden;
     padding: 5px;
     width: 100%;
