OrgChartComponent layout depends on element width now instead of window width

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.scss
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.scss
@@ -1,4 +1,9 @@
 org-chart-search {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
+  overflow-x: auto;
+
   app-bar {
     > .app-bar-content {
       display: block;
