--- a/src/main/angular/src/ux/app-bar.component.scss
+++ b/src/main/angular/src/ux/app-bar.component.scss
@@ -1,7 +1,7 @@
-app-bar {
+mf-app-bar {
   display: block;
 
-  > .app-bar-content {
+  > .mf-app-bar-content {
     display: flex;
     flex-flow: row nowrap;
 
