--- a/src/main/angular/src/peoplesearch/peoplesearch.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch.component.html
@@ -1,8 +1,8 @@
-<app-bar>
+<mf-app-bar>
     <div class="page-content-title">People Search</div>
     <span flex></span>
     <icon-button ng-click="$ctrl.viewToggleClicked()" ng-class="$ctrl.viewToggleClass"></icon-button>
-</app-bar>
+</mf-app-bar>
 
 <div class="search-bar">
     <input id="username" name="username" placeholder="Search" class="peoplesearch-input-username"
