--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -1,11 +1,11 @@
 <table st-table="rowCollection" ng-if="$ctrl.people.length" class="table table-striped">
     <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Title</th>
-            <th>Email</th>
-            <th>Telephone</th>
+            <th>{{ 'COLUMN_FIRST_NAME' | translate }}</th>
+            <th>{{ 'COLUMN_LAST_NAME' | translate }}</th>
+            <th>{{ 'COLUMN_TITLE' | translate }}</th>
+            <th>{{ 'COLUMN_EMAIL' | translate }}</th>
+            <th>{{ 'COLUMN_TELEPHONE' | translate }}</th>
         </tr>
     </thead>
     <tbody>
