--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -1,5 +1,5 @@
 <app-bar>
-    <div class="page-content-title">Organization</div>
+    <div class="page-content-title">{{ 'TITLE_ORGANIZATION' | translate }}</div>
     <auto-complete flex
                    search="$ctrl.autoCompleteSearch(query)"
                    item-selected="$ctrl.onAutoCompleteItemSelected(person)"
