Changed Table and TableColumn components to directives. Added @Directive decorator.

--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -1,3 +1,10 @@
+<!--<mf-table class="table-striped" data="person in $ctrl.people">-->
+    <!--<mf-table-column label="First Name" value="person.givenName"></mf-table-column>-->
+    <!--<mf-table-column label="Last Name" value="person.sn"></mf-table-column>-->
+    <!--<mf-table-column label="Title" value="person.title"></mf-table-column>-->
+    <!--<mf-table-column label="Email" value="person.mail"></mf-table-column>-->
+    <!--<mf-table-column label="Telephone" value="person.telephoneNumber"></mf-table-column>-->
+<!--</mf-table>-->
 <table st-table="rowCollection" ng-if="$ctrl.people.length" class="table table-striped">
     <thead>
         <tr>
