--- a/src/main/angular/src/peoplesearch/peoplesearch.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch.component.html
@@ -1,7 +1,7 @@
 <mf-app-bar>
     <div class="page-content-title">{{ 'TITLE_PEOPLE_SEARCH' | translate }}</div>
     <span flex></span>
-    <icon-button ng-click="$ctrl.viewToggleClicked()" ng-class="$ctrl.viewToggleClass"></icon-button>
+    <mf-icon-button ng-click="$ctrl.viewToggleClicked()" ng-class="$ctrl.viewToggleClass"></mf-icon-button>
 </mf-app-bar>
 
 <div class="search-bar">
