--- a/src/main/angular/src/ux/icon-button.component.scss
+++ b/src/main/angular/src/ux/icon-button.component.scss
@@ -1,30 +1,35 @@
-$icon-button-color: #808080;
-$icon-button-size: 20px;
-$icon-button-bg-color: transparent;
+$mf-icon-button-color: #808080;
+$mf-icon-button-size: 20px;
+$mf-icon-button-bg-color: transparent;
 
-$icon-button-hover-bg-color: #f6f9f8;
-//$icon-button-hover-border-color: #dae1e1;
-$icon-button-hover-border-color: #0088ce;
-$icon-button-hover-color: #0088ce;
+$mf-icon-button-hover-bg-color: #f6f9f8;
+//$mf-icon-button-hover-border-color: #dae1e1;
+$mf-icon-button-hover-border-color: #0088ce;
+$mf-icon-button-hover-color: #0088ce;
 
-icon-button {
-  background-color: $icon-button-bg-color;
+mf-icon-button {
+  background-color: $mf-icon-button-bg-color;
   border: 1px solid transparent;
-  color: $icon-button-color;
+  color: $mf-icon-button-color;
   cursor: pointer;
   display: block;
-  flex: 0 0 $icon-button-size;
-  height: $icon-button-size;
+  flex: 0 0 $mf-icon-button-size;
+  height: $mf-icon-button-size;
   padding: 2px;
-  width: $icon-button-size;
+  width: $mf-icon-button-size;
 
   &.fa {
     font-size: 20px;
   }
 
   &:hover {
-    background-color: $icon-button-hover-bg-color;
-    border-color: $icon-button-hover-border-color;
-    color: $icon-button-hover-color;
+    background-color: $mf-icon-button-hover-bg-color;
+    border-color: $mf-icon-button-hover-border-color;
+    color: $mf-icon-button-hover-color;
+  }
+
+  > img {
+    height: 100%;
+    width: 100%;
   }
 }
