Tied the angular translate configuration into the existing PWM localization strategy.

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -1,5 +1,5 @@
 <mf-app-bar>
-    <div class="page-content-title">{{ 'TITLE_ORGANIZATION' | translate }}</div>
+    <div class="page-content-title" translate="Title_Organization">Organization</div>
     <mf-auto-complete flex
                    search="$ctrl.autoCompleteSearch(query)"
                    item-selected="$ctrl.onAutoCompleteItemSelected(person)"
