--- a/src/main/angular/src/peoplesearch/person-card.component.html
+++ b/src/main/angular/src/peoplesearch/person-card.component.html
@@ -24,9 +24,9 @@
     </div>
 
     <div class="details" ng-switch-default>
-        <div ng-bind="$ctrl.data[0]"></div>
-        <div ng-bind="$ctrl.data[1]"></div>
-        <div ng-bind="$ctrl.data[2]"></div>
-        <div ng-bind="$ctrl.data[3]"></div>
+        <div ng-bind="$ctrl.person.displayNames[0]"></div>
+        <div ng-bind="$ctrl.person.displayNames[1]"></div>
+        <div ng-bind="$ctrl.person.displayNames[2]"></div>
+        <div ng-bind="$ctrl.person.displayNames[3]"></div>
     </div>
 </div>
