--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.scss
@@ -1,6 +1,11 @@
 people-search-table {
+    display: flex;
+    flex-flow: column nowrap;
+    height: 100%;
+
     > mf-table {
         flex: 1 1;
         margin-top: 10px;
+        overflow: auto;
     }
 }
