OrgChartComponent search uses displayName property for autocompmlete results template.

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -5,9 +5,7 @@
                    item-selected="$ctrl.onAutoCompleteItemSelected(person)"
                    item="person">
         <content-template>
-            <span ng-bind="person.givenName + ' ' + person.sn"></span>
-            <span ng-bind="person.title"></span>
-            <span ng-bind="person.telephoneNumber"></span>
+            <span ng-bind="person.displayName"></span>
         </content-template>
     </mf-auto-complete>
 </mf-app-bar>
