Added icon font generation to build pipelines. IconComponent implementation. IconComponent used in IconButtonComponent. Using SearchBarComponent in AutoCompleteComponent implementation

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.scss
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.scss
@@ -35,11 +35,14 @@ org-chart-search {
         }
 
         > mf-auto-complete {
-          > input {
-            max-width: 360px;
+          max-width: 360px;
+
+          > mf-search-bar {
+            max-width: 100%;
           }
 
           > .results {
+            min-width: 100%;
             width: auto;
           }
         }
