--- a/src/main/angular/src/ux/auto-complete.component.html
+++ b/src/main/angular/src/ux/auto-complete.component.html
@@ -1,6 +1,5 @@
-<input type="text"
-       placeholder="Search"
-       ng-model="$ctrl.query"
-       ng-keydown="$ctrl.onInputKeyDown($event)"
-       ng-focus="$ctrl.onInputFocus()" />
+<mf-search-bar search-text="$ctrl.query"
+               ng-keydown="$ctrl.onInputKeyDown($event)"
+               ng-focus="$ctrl.onInputFocus()"
+               auto-focus></mf-search-bar>
 <ng-transclude></ng-transclude>
