--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -4,5 +4,5 @@
        title="Search Box"
        autocomplete="off" />
 <span class="placeholder" ng-hide="$ctrl.searchText">{{$ctrl.placeholder || 'Search' }}</span>
-<mf-icon-button icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon-button>
+<mf-icon icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon>
 <!-- loader graphic -->
