Updated property for autocomplete results from displayName to _displayName

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -5,7 +5,7 @@
                    item-selected="$ctrl.onAutoCompleteItemSelected(person)"
                    item="person">
         <content-template>
-            <span ng-bind="person.displayName"></span>
+            <span ng-bind="person._displayName"></span>
         </content-template>
     </mf-auto-complete>
 </mf-app-bar>
