Navigation to and from OrgChartSearchComponent

--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -2,6 +2,7 @@
     <div class="page-content-title" translate="Title_PeopleSearch">People Search</div>
     <span flex></span>
     <mf-icon-button icon="view-grid" ng-click="$ctrl.gotoCardsView()"></mf-icon-button>
+    <mf-icon-button icon="file-tree" ng-click="$ctrl.gotoOrgchart()"></mf-icon-button>
 </mf-app-bar>
 
 <mf-search-bar search-text="$ctrl.query" auto-focus></mf-search-bar>
