--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -8,6 +8,9 @@
             <span ng-bind="person._displayName"></span>
         </content-template>
     </mf-auto-complete>
+    <span flex></span>
+    <mf-icon-button icon="view-grid" ng-click="$ctrl.gotoSearchState('search.cards')"></mf-icon-button>
+    <mf-icon-button icon="table-large" ng-click="$ctrl.gotoSearchState('search.table')"></mf-icon-button>
 </mf-app-bar>
 
 <org-chart person="$ctrl.person"
